crates/graphql-orm/tests/ui/repository_only_schema_roots.stderr
error[E0425]: cannot find type `PrivateRecordQueries` in this scope
  --> tests/ui/repository_only_schema_roots.rs:13:1
   |
 3 |   #[derive(RepositoryEntity, Clone, serde::Serialize, serde::Deserialize)]
   |            ---------------- similarly named type alias `PrivateRecordKey` defined here
...
13 | / schema_roots! {
14 | |     backend: "sqlite",
15 | |     query_custom_ops: [],
16 | |     entities: [PrivateRecord],
17 | | }
   | |_^
   |
   = note: this error originates in the macro `schema_roots` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a type alias with a similar name exists
   |
13 - schema_roots! {
14 -     backend: "sqlite",
15 -     query_custom_ops: [],
16 -     entities: [PrivateRecord],
17 - }
13 + PrivateRecordKey
   |

error[E0425]: cannot find type `PrivateRecordMutations` in this scope
  --> tests/ui/repository_only_schema_roots.rs:13:1
   |
13 | / schema_roots! {
14 | |     backend: "sqlite",
15 | |     query_custom_ops: [],
16 | |     entities: [PrivateRecord],
17 | | }
   | |_^ not found in this scope
   |
   = note: this error originates in the macro `schema_roots` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `PrivateRecordSubscriptions` in this scope
  --> tests/ui/repository_only_schema_roots.rs:13:1
   |
13 | / schema_roots! {
14 | |     backend: "sqlite",
15 | |     query_custom_ops: [],
16 | |     entities: [PrivateRecord],
17 | | }
   | |_^ not found in this scope
   |
   = note: this error originates in the macro `schema_roots` (in Nightly builds, run with -Z macro-backtrace for more info)
